# todo-20260512

./: .workflow-repos.json  README.md  agent-team.workflow.yaml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/skills/api-contract-test/: SKILL.md
.claude/skills/arbiter/: SKILL.md
.claude/skills/blackbox-validator/: SKILL.md
.claude/skills/business-model-probe/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/compute-impact-scope/: SKILL.md
.claude/skills/decompose-spec/: SKILL.md
.claude/skills/deployment-constraints-probe/: SKILL.md
.claude/skills/design-approval/: SKILL.md
.claude/skills/design-dialogue/: SKILL.md
.claude/skills/draft-adr/: SKILL.md
.rlm/business/: business-model-2026-05-12.md  deployment-constraints-2026-05-12.md
app/: cross-browser.test.ts  page.test.ts  page.test.tsx  page.ts  page.tsx
components/: SearchInput.test.ts  SearchInput.tsx  TodoForm.tsx  TodoItem.test.ts  TodoItem.ts  TodoItem.tsx  TodoList.tsx
lib/: alert-suppression.test.ts  store.test.ts  store.ts  types.ts  utils.test.ts  utils.ts
src/: App.search.test.tsx  App.test.tsx  App.tsx  db.smoke.test.ts  server.test.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: SearchInput.test.tsx  SearchInput.tsx  TodoForm.tsx  TodoItem.test.tsx  TodoItem.tsx  TodoList.tsx
src/lib/: db.test.ts  db.ts  types.ts  utils.test.ts  utils.ts
(+18 files in other folders)
